repology-updater/src/parsing/parsers/snapshots/repology_updater__parsing__parsers__freebsd__tests__error_missing_version.snap
---
source: repology-updater/src/parsing/parsers/freebsd.rs
expression: res.unwrap_err()
---
Error {
    context: "on line 1",
    source: EmptyVersion,
}
